<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:id="@+id/data_header"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/name_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/data_header" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text" app:layout_constraintStart_toEndOf="@+id/name" android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp" app:layout_constraintBaseline_toBaselineOf="@+id/name"
            android:hint="@string/name_text_hint"/>
    <TextView
            android:text="@string/adress_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/adress_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/adress" android:layout_marginLeft="81dp"
            android:layout_marginStart="81dp" app:layout_constraintStart_toEndOf="@+id/adress"
            android:hint="@string/adress_text_hint"/>
    <TextView
            android:text="@string/phone_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/adress_text"/>
    <EditText
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_text"
            app:layout_constraintStart_toEndOf="@+id/phone"
            android:layout_marginLeft="47dp" android:layout_marginStart="47dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone" android:hint="@string/phone_text_hint"
    />
    <TextView
            android:text="@string/email_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/phone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            app:layout_constraintStart_toEndOf="@+id/email" android:layout_marginLeft="79dp"
            android:layout_marginStart="79dp" app:layout_constraintBaseline_toBaselineOf="@+id/email"
            android:hint="@string/email_text_hint"/>
    <TextView
            android:text="@string/remarks_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:id="@+id/remarks"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:id="@+id/remarks_text"
            app:layout_constraintStart_toEndOf="@+id/remarks" android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp" app:layout_constraintBaseline_toBaselineOf="@+id/remarks"
            android:hint="@string/remarks_text_hint"/>
    <TextView
            android:text="@string/choose_delivery_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/remarks_text"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery" android:id="@+id/radioGroup">

        <RadioButton
                android:id="@+id/courier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/courier_delivery"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/post_delivery"/>

        <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up"/>
    </RadioGroup>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/choose_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:textSize="18sp"/>
    <Button
            android:text="@string/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.214"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="launchSecondActivity"/>
</android.support.constraint.ConstraintLayout>