<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <TextView
            android:text="@string/delivery_method_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery_method_summary"
            android:layout_below="@+id/payment_method_summary" android:layout_marginTop="24dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/adress_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adress_summary"
            android:layout_below="@+id/name_summary" android:layout_marginTop="24dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/phone_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_summary"
            android:layout_below="@+id/adress_summary" android:layout_marginTop="72dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/email_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_summary"
            android:layout_below="@+id/phone_summary" android:layout_marginTop="24dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/remarks_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remarks_summary"
            android:layout_below="@+id/email_summary" android:layout_marginTop="24dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/payment_method_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payment_method_summary"
            android:layout_below="@+id/remarks_summary" android:layout_marginTop="72dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:text="@string/name_summary_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_summary"
            android:layout_alignParentTop="true" android:layout_marginTop="32dp"
            android:layout_alignParentLeft="true" android:layout_marginLeft="24dp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="101dp" android:layout_toRightOf="@id/name_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_marginTop="27dp" android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/adress_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="95dp" android:layout_toRightOf="@id/adress_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/name_message_summary" android:layout_marginTop="18dp"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="62dp" android:layout_toRightOf="@id/phone_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/adress_summary" android:layout_marginTop="65dp"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/email_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="93dp" android:layout_toRightOf="@id/email_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/phone_message_summary" android:layout_marginTop="19dp"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/remarks_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="94dp" android:layout_toRightOf="@id/remarks_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/email_summary" android:layout_marginTop="19dp"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/payment_method_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="28dp" android:layout_toRightOf="@id/payment_method_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/remarks_summary" android:layout_marginTop="66dp"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/delivery_method_message_summary"
            android:textStyle="bold"
            android:layout_marginLeft="32dp" android:layout_toRightOf="@id/delivery_method_summary"
            android:layout_alignParentRight="true" android:layout_marginRight="32dp"
            android:layout_below="@id/payment_method_message_summary" android:layout_marginTop="19dp"
            android:textSize="18sp"/>
    <Button
            android:text="@string/next_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:id="@+id/next_button" android:layout_marginBottom="38dp"
            android:onClick="launchSecondActivity"/>
</RelativeLayout>